...

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_overview">Overview</string>

    <string name="undo">Undo</string>

    <string name="overview_toolbar_title_today">Today:</string>
    <string name="overview_empty_meals">You haven\'t eaten anything today yet.</string>
    <string name="overview_meal_remove_description">Remove this meal</string>
    <string name="overview_meal_edit_description">Edit meal</string>
    <string name="overview_meal_photo_description">Photography of a meal</string>
...
    <string name="add_meal_ingredients_empty_error">You must add at least one ingredient</string>

    <string name="ingredients_title">Ingredients</string>
    <string name="ingredients_search_title">Search ingredients</string>
    <string name="ingredients_no_ingredients_yet">You haven\'t added any ingredients yet.</string>
    <string name="ingredients_search_result_empty">No matching ingredients found.</string>
    <string name="ingredients_item_edit_ingredient">Edit ingredient</string>
    <string name="ingredients_item_delete_ingredient">Delete ingredient</string>
    <string name="ingredients_remove_ingredient_dialog_title">Remove ingredient</string>
    <string name="ingredients_remove_ingredient_dialog_message">This ingredient is used somewhere in a meal. Removing this ingredient will change all meals that contains it.\nIs this what you want?</string>
    <string name="ingredients_undo_remove">Ingredient removed</string>
    <string name="ingredients_search_tag_remove_desc">Remove category from search</string>
    <string name="ingredients_item_add_to_new_meal">Add to new meal</string>
    <string name="ingredients_item_options_title">Select action</string>

    <string name="add_ingredient_title">Add Ingredient</string>
    <string name="add_ingredient_name_hint">Name</string>
    <string name="add_ingredient_remove_category">Remove category</string>
    <string name="add_ingredient_energy_density_hint">Amount of calories</string>
    <string name="add_ingredient_image_select_title">Select picture for your ingredient</string>
    <string name="add_ingredient_name_error_empty">Name cannot be empty!</string>
    <string name="add_ingredient_energy_density_error_empty">Amount has be specified!</string>
    <string name="add_ingredient_energy_density_error_zero">Amount must be greater than zero!</string>
    <string name="add_ingredient_search_name_desc">Search the Internet for this ingredient</string>
    <string name="add_ingredient_default_search_keywords">calories</string>
    <string name="add_ingredient_select_type_title">Select unit</string>

...
