<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredients_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.overview.OverviewActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_gravity="center_vertical"
                    android:text="@string/ingredients_title"/>
                <com.github.st1hy.countthemcalories.ui.core.tokensearch.TokenSearchView
                    android:id="@+id/ingredients_search_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"/>
            </FrameLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/ingredients_content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/ActivityContent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.github.st1hy.countthemcalories.ui.activities.ingredients.fragment.IngredientsFragment"
            android:tag="ingredients content"
            tools:layout="@layout/ingredients_content"/>
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ingredients_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@color/colorBackground"
        app:pressedTranslationZ="12dp"
        app:elevation="6dp"
        app:srcCompat="@drawable/ic_add_24px" />

    <View
        android:id="@+id/ingredients_touch_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</android.support.design.widget.CoordinatorLayout>
