...
            android:id="@+id/ingredients_item_delete_frame"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/ingredients_item_delete"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/ingredients_item_delete_ingredient"
                android:minWidth="80dp"
                app:srcCompat="@drawable/ic_delete_24px"
...
            android:id="@+id/ingredients_item_edit_frame"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/ingredients_item_edit"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/ingredients_item_edit_ingredient"
                android:minWidth="80dp"
                app:srcCompat="@drawable/ic_edit_24px"
...
